--- a/sharingapp/src/main/res/drawable/bg_install_button.xml
+++ b/sharingapp/src/main/res/drawable/bg_install_button.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/white" />
-            <stroke android:width="1dp" android:color="@color/black" />
+            <stroke android:width="1dp" android:color="@color/blue_400" />
             <corners android:radius="8dp" />
         </shape>
     </item>
