--- a/sharingapp/src/main/res/values/colors.xml
+++ b/sharingapp/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="blue_400">#00B0FF</color>
+    <color name="gray">#808080</color>
 </resources>
